--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "forkify",
   "version": "1.0.0",
   "description": "recipe app",
-  "source": "src/index.html",
+  "source": "./src/index.html",
+  "default": "./src/index.html",
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "start": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html --dist-dir ./dist"
   },
   "author": "js",
   "license": "ISC",
